--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,14 @@
 !var/SymfonyRequirements.php
 /vendor/
 /web/bundles/
+/v3.0.18)
+/v1.30.0)
+/v2.5.6)
+/v2.4.2)
+/composer.phar
+/LICENSE
+/phpunit.xml.dist
+/loading
+/purging
+/composer.lock
+/php
