--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -29,8 +29,8 @@ security:
                         # if you are using Symfony < 2.8, use the following config instead:
                         # csrf_provider: form.csrf_provider
 
-                    logout:       true
-                    anonymous:    true
+                    logout: true
+                    anonymous:
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
