remove User entity into UserBundle

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -74,4 +74,4 @@ swiftmailer:
 fos_user:
     db_driver: orm
     firewall_name: main
-    user_class: PostsBundle\Entity\User
+    user_class: UserBundle\Entity\User
