--- a/src/PostsBundle/Resources/config/routing.yml
+++ b/src/PostsBundle/Resources/config/routing.yml
@@ -1,6 +1,6 @@
 posts_post:
     resource: "@PostsBundle/Resources/config/routing/post.yml"
-    prefix:   /post
+    prefix:   /posts
 
 posts_homepage:
     path:     /
