--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+#file_upload:
+    #resource: "@FileUploadBundle/Resources/config/routing.yml"
+    #prefix:   /
+
 user:
     resource: "@UserBundle/Resources/config/routing.yml"
     prefix:   /user
