--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -8,8 +8,8 @@ imports:
 # Put parameters here that don't need to change on each machine where the app is deployed
 # http://symfony.com/doc/current/best_practices/configuration.html#application-related-configuration
 parameters:
-    locale: en
-    files_directory: "%kernel.root_dir%/uploads/files"
+    locale: ~
+    files_directory: "%kernel.root_dir%/../web/uploads/files"
 
 framework:
     #esi:             ~
