--- a/src/PostsBundle/Resources/config/routing/post.yml
+++ b/src/PostsBundle/Resources/config/routing/post.yml
@@ -14,6 +14,7 @@ post_new:
     path:     /new
     defaults: { _controller: "PostsBundle:Post:new" }
     methods:  [GET, POST]
+    #вот тута добавить дефолтный 0 для subj
 
 post_edit:
     path:     /{id}/edit
