--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -77,5 +77,9 @@ fos_user:
     db_driver: orm
     firewall_name: main
     user_class: UserBundle\Entity\User
+    # Изменить form_email!!!
+    from_email:
+            address:        noreply@example.com
+            sender_name:    Demo App
 
 
