--- a/src/PostsBundle/Resources/config/routing/subject.yml
+++ b/src/PostsBundle/Resources/config/routing/subject.yml
@@ -1,6 +1,10 @@
-subj_index:
-    path: /{subj}
-    defaults: { _controller: "PostsBundle:Subject:index" }
-        requirements:
-            methods: GET
-            post_id: \w
+#subj_index:
+#    path: /{subj}
+#    defaults: { _controller: "PostsBundle:Subject:index" }
+#        requirements:
+#            methods: GET
+#            post_id: \w
+
+test:
+    path: /t
+    defaults: { _controller: "AppBundle:Default:test"}
