--- a/src/PostsBundle/Resources/config/routing/subject.yml
+++ b/src/PostsBundle/Resources/config/routing/subject.yml
@@ -5,6 +5,6 @@
 #            methods: GET
 #            post_id: \w
 
-test:
-    path: /t
-    defaults: { _controller: "AppBundle:Default:test"}
+subject:
+    path: /{subj}
+    defaults: { _controller: "PostsBundle:Subject:index"}
