--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -22,15 +22,14 @@ security:
             security: false
 
         main:
-                    pattern: ^/
-                    form_login:
-                        provider: fos_userbundle
-                        csrf_token_generator: security.csrf.token_manager
-                        # if you are using Symfony < 2.8, use the following config instead:
-                        # csrf_provider: form.csrf_provider
-
-                    logout: true
-                    anonymous:
+            pattern: ^/
+            form_login:
+                provider: fos_userbundle
+                csrf_token_generator: security.csrf.token_manager
+                # if you are using Symfony < 2.8, use the following config instead:
+                # csrf_provider: form.csrf_provi
+            logout: true
+            anonymous:
     access_control:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
