--- a/composer.json
+++ b/composer.json
@@ -28,7 +28,8 @@
     "sensio/distribution-bundle": "^5.0",
     "sensio/framework-extra-bundle": "^3.0.2",
     "incenteev/composer-parameter-handler": "^2.0",
-    "friendsofsymfony/user-bundle": "~2.0@dev"
+    "friendsofsymfony/user-bundle": "~2.0@dev",
+    "phing/phing": "2.16.0"
   },
   "require-dev": {
     "sensio/generator-bundle": "^3.0",
@@ -62,7 +63,5 @@
       "file": "app/config/parameters.yml"
     },
     "branch-alias": null
-  },
-  "config": {
   }
 }
