--- a/build.xml
+++ b/build.xml
@@ -14,6 +14,7 @@
     <property name="dir.reports" value="${dir.build}/logs"/>
     <property name="dir.reports.pdepend" value="${dir.reports}/pdepend"/>
     <property name="dir.reports.coverage" value="${dir.reports}/coverage"/>
+    <property name="dir.reports.build" value="${dir.reports}/build"/>
 
 
     <!-- ============================================  -->
@@ -27,6 +28,9 @@
         <mkdir dir="${dir.reports}"/>
         <mkdir dir="${dir.reports.pdepend}"/>
         <mkdir dir="${dir.reports.coverage}"/>
+        <mkdir dir="${dir.reports.build}"/>
+
+        <touch file="${dir.reports.build}/db.log"/>
     </target>
 
     <!-- MAIN -->
@@ -43,8 +47,24 @@
     </target>
     <target name="clear">
         <delete failonerror="true" verbose="true" includeemptydirs="true">
-            <fileset dir="${dir.build" includes="**/*"/>
+            <fileset dir="${dir.build}" includes="**/*"/>
         </delete>
     </target>
 
+    <!-- ============================================  -->
+    <!-- don't work -->
+    <!-- Target: database.up -->
+    <!-- ============================================  -->
+    <target name="database.up" description="Create database and schema.">
+        <exec command="php" error="${dir.reports.build}/db.log" dir="${project.basedir}"
+        checkreturn="true">
+            <arg value="bin/console"/>
+            <arg value="doctrine:database:create"/>
+        </exec>
+        <exec  command="php" error="${dir.reports.build}/db.log" dir="${project.basedir}"
+        checkreturn="true">
+            <arg value="bin/console"/>
+            <arg value="doctrine:schema:create"/>
+        </exec>
+    </target>
 </project>
