--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -1,3 +1,7 @@
+admin:
+    resource: "@AdminBundle/Resources/config/routing.yml"
+    prefix:   /
+
 #file_upload:
     #resource: "@FileUploadBundle/Resources/config/routing.yml"
     #prefix:   /
