--- a/app/config/routing.yml
+++ b/app/config/routing.yml
@@ -2,6 +2,9 @@ admin:
     resource: "@AdminBundle/Resources/config/routing.yml"
     prefix:   /admin
 
+subject:
+    path: /{subj}
+    defaults: { _controller: "PostsBundle:Subject:index"}
 #file_upload:
     #resource: "@FileUploadBundle/Resources/config/routing.yml"
     #prefix:   /
@@ -24,6 +27,8 @@ app:
 
 fos_user:
     resource: "@FOSUserBundle/Resources/config/routing/all.xml"
+
+
 
 
 
