--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -26,6 +26,7 @@ security:
             form_login:
                 provider: fos_userbundle
                 csrf_token_generator: security.csrf.token_manager
+                success_handler: login_handler
                 # if you are using Symfony < 2.8, use the following config instead:
                 # csrf_provider: form.csrf_provi
             logout: true
