--- a/src/UserBundle/Resources/config/services.yml
+++ b/src/UserBundle/Resources/config/services.yml
@@ -1,4 +1,10 @@
 services:
-#    user.example:
+    login_handler:
+      class: UserBundle\Listeners\LoginListener
+      arguments:
+          container : "@service_container"
+          router: "@router"
+      tags:
+          - {name: kernel.login_hendler }
 #        class: UserBundle\Example
 #        arguments: ["@service_id", "plain_value", "%parameter%"]
