fix anotations in Post.php and testin admin panel

--- a/src/AdminBundle/Resources/config/routing.yml
+++ b/src/AdminBundle/Resources/config/routing.yml
@@ -8,3 +8,9 @@ admin_get_json:
         methods: GET
         currentPage: \d+
 
+admin_test:
+    path: /test
+    defaults: { _controller: AdminBundle:Index:test}
+    requirements:
+      methods: GET
+
