--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -25,7 +25,7 @@ framework:
     validation:      { enable_annotations: true }
     #serializer:      { enable_annotations: true }
     templating:
-        engines: ['php','twig']
+        engines: ['twig','php']
     default_locale:  "%locale%"
     trusted_hosts:   ~
     trusted_proxies: ~
