--- a/src/PostsBundle/Resources/config/services.yml
+++ b/src/PostsBundle/Resources/config/services.yml
@@ -1,4 +1,5 @@
 services:
-#    posts.example:
-#        class: PostsBundle\Example
-#        arguments: ["@service_id", "plain_value", "%parameter%"]
+    posts.controller:
+        class: PostsBundle\Service\PostService
+        arguments: ['@form.factory', '@router', '@form.type.form']
+        #arguments : "@service_id", "plain_value", "%parameter%"
