Security: Blocked access to pages for edit and delete

--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -36,6 +36,8 @@ security:
         - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/admin/, role: ROLE_ADMIN }
+        - { path: /edit, role: ROLE_ADMIN}
+        - { path: /delete, role: ROLE_ADMIN}
 
             #anonymous: ~
             # activate different ways to authenticate
